--- a/writing/iconf16/ischools-core-study.tex
+++ b/writing/iconf16/ischools-core-study.tex
@@ -64,7 +64,7 @@
 \pagestyle{fancy} % All pages have headers and footers
 \fancyhf{}
 \fancyhead[L]{\vspace{-15mm}\fontsize{10pt}{10pt}\selectfont{iConference 2016} }%This is the header
-\fancyhead[R]{\vspace{-15mm}\fontsize{10pt}{10pt}\selectfont{[Name of the first author]} }
+\fancyhead[R]{\vspace{-15mm}\fontsize{10pt}{10pt}\selectfont{[Burton]} }
 \fancyfoot[C]{\thepage} % Custom footer text
 
 \usepackage{tocloft} % Change List of Figures / Tables
@@ -127,10 +127,11 @@ $^{1}$University of Pittburgh\\ % Enter affiliations.
 \textbf{Abstract}\\
 The purpose of this study is to perform an empirical analysis of existing "core" or "foundation" courses in iSchools to better understand what the community implicitly considers to be its foundational knowledge base. This paper presents a preliminary journal citation analysis of core syllabi from master's programs in the iCaucus. Initial findings show journals from library science and information science dominate the field and only eight articles are cited by more than two courses. Finally, the disciplinary diversity of programs was calculated and visualized showing how interdisciplinarity is expressed across the iCaucus. The hope is that this initial report will help enroll additional collaborators, either as data providers or analysts, and stimulate a data-rich conversation about what we teach in core courses.\\
 {\footnotesize \textbf{Keywords:} ischools; interdisciplinary; graduate education; foundations courses}\\
-{\footnotesize \textbf{Citation:}  Editor will add citation.}\\
+{\footnotesize \textbf{Citation:}  Burton, M. (2016). Looking for the Core: Preliminary Explorations of iCaucus Syllabi. Presented at the IConference 2016 Proceedings, iSchools. http://doi.org/10.9776/16225
+}\\
 {\footnotesize \textbf{Copyright:} Copyright is held by the authors.}\\
 {\footnotesize \textbf{Research Data:}  https://github.com/mcburton/ischools-core} \\ % Please delete line if not used.
-{\footnotesize \textbf{Contact:} Author will add e-mail address.}\\ % Please enter at least one contact e-mail address. 
+{\footnotesize \textbf{Contact:} mcburton@pitt.edu}\\ % Please enter at least one contact e-mail address. 
 \vspace{2pt}\\
 \hline
 \end{tabularx}
@@ -164,7 +165,7 @@ Wu et al. \citeyear{wu_state_2012} specifically analyzed core courses at the mas
 This empirical research into the foundational curriculum of iSchools has only touched upon the surface of the data available. Now that iSchools have been teaching students for over two decades, there is an opportunity for a data-rich conversation around the core (or cores) of iSchool pedagogy. This project aims stimulate that conversation with an empirical analysis that dives \textit{into} the content of core course syllabi. 
 
 \section{Methods}
-Data collection for this study had three phases. The first phase surveyed master's degree programs of schools in the iCaucus. The iCaucus was selected because the 23 schools are a manageable sample size for this initial research. Dual degree programs and programs outside the information disciplines, like education or computer science, were excluded because they represent distinct (although related) disciplines. The second phase enumerated "core" or "foundation" courses for each of the selected degree programs. This effort focused on core courses at the program level, not the core requirements for individual specializations within programs. 
+Data collection for this study had three phases. The first phase surveyed master's degree programs of schools in the iCaucus. The iCaucus was selected because the 24 schools are a manageable sample size for this initial research. Dual degree programs and programs outside the information disciplines, like education or computer science, were excluded because they represent distinct (although related) disciplines. The second phase enumerated "core" or "foundation" courses for each of the selected degree programs. This effort focused on core courses at the program level, not the core requirements for individual specializations within programs. 
 
 Finally, there is an ongoing effort to obtain a reasonably recent copy of course syllabi. Of the 25 iCaucus schools, syllabi from 14 schools have already been obtained. Syllabi were obtained from institution catalogues, from faculty home pages, or via personal communication. Convenience sampling has guided the collection process with a total of 63 syllabi collected in time for publication.
 
